samples/_failures_safe/1761435330_315756_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7b5e733a.c:139: error: expected ‘;’, ‘,’ or ‘)’ at end of input
